# movies_api

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
data/: imdb-top-250-movie-titles.txt  omdb-top-250-movies.json
movies_api/: database.py  database_schema.py  main.py  omdb_import.py
movies_api/models/: movie.py
movies_api/routes/: movies.py  test_movies.py
movies_api/services/: omdb.py
