[tool.poetry]
name = "movies-api"
version = "0.1.0"
description = ""
authors = ["Peter Marklund <peter@marklunds.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
