[tool.poetry]
name = "movies-api"
version = "0.1.0"
description = ""
authors = ["Peter Marklund <peter@marklunds.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
cloud-sql-python-connector = "^1.5.0"
pg8000 = "^1.30.3"
sqlalchemy = "^2.0.24"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
httpx = "^0.26.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
